# Kuber-AI

./: .gitignore  .pre-commit-config.yaml  README.md  dev_setup.bash  pyproject.toml
common/: config_loader.py  logging_config.py
docs/architecture/: High Level Design.md
docs/attachments/: Kuber AI HLD.drawio
frontend/: config.json  index.html  script.js  style.css
mcp_client/: .env.sample  README.md  main.py  pyproject.toml
mcp_client/src/: main.py
mcp_client/src/models/: conversation_model.py
mcp_client/src/routers/: conversation_router.py
mcp_client/src/utils/: configure_cors.py  lifespan.py
mcp_server/: .env.sample  DockerFile  README.md  main.py  pyproject.toml
mcp_server/microk8s_setup/: generate-kubeconfig.sh  test_k8s_connection.py
mcp_server/src/: __init__.py  main.py
mcp_server/src/connector/: kubernetes_connector.py
mcp_server/src/connectors/: __init__.py  kubernetes_connector.py
mcp_server/src/models/: kubernetes_read_tool_model.py
mcp_server/src/tools/: __init__.py  kubernetes_api_tool.py  kubernetes_read_tool.py  tool_loader.py
mcp_server/src/utilities/: configure_logging.py  http_request_builder.py
mcp_server/src/utils/: singleton.py
microk8s_setup/: KUBECONFIG_SETUP.md  generate-kubeconfig.sh  microk8s setup.md
