[project]
name = "kuberai-mcp-client"
version = "0.1.0"
description = "MCP Client component for KuberAI"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"

# Component-specific dependencies
dependencies = [
    "mcp>=1.10.1",
    "kubernetes>=28.0.0",
    "pydantic>=2.0.0",
    "asyncio-mqtt>=0.16.0",
    "httpx>=0.25.0",
]

# Optional dependencies for this component
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Package discovery
[tool.hatch.build.targets.wheel]
packages = ["src/"]

