[project]
name = "kuberai-mcp-server"
version = "0.1.0"
description = "MCP Server component for KuberAI"
authors = [
    {name = "Shreyas", email = "shreyasbhat17@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

# Component-specific dependencies
dependencies = [
    "fastmcp>=2.10.1",
    "kubernetes>=28.0.0",
    "pydantic>=2.0.0",
    "asyncio-mqtt>=0.16.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
]

# Optional dependencies for this component
[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Package discovery
[tool.hatch.build.targets.wheel]
packages = ["src/"]
